# pysoup

./: .gitignore  Makefile  README.md  pyproject.toml
src/pysoup/: caesar.py  check_link.py  map_it.py  scraping.py  unicode.py
