[metadata]
name = pysoup
version = 1.0.0
description = A
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
author = shun
author_email = shun123k@gmail.com
classifiers =
    Development Status :: 1
    License :: OSI Approved :: Apache Software Licåense
    Programming Language :: Python :: 3.11.6

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line_length = 119

[tool.mypy]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
