[project]
name = "pysoup"
version = "1.0.0"
description = "Various Python programs are created and placed."
readme = "README.md"
requires-python = ">=3.11.6"
license = {file = "LICENSE"}
authors = [
    {name = "Kobayashi Shun", email = "shun123k@gmail.com"}
]
classifiers = [
    "Development Status :: 1 - Develop",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "beautifulsoup4",
    "requests",
    "urllib3",
]

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line_length = 119

[tool.mypy]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
